Updates reflecting my first 8 months with Altamira

--- a/_includes/resume/employmenthistory/altamira.html
+++ b/_includes/resume/employmenthistory/altamira.html
@@ -5,31 +5,49 @@
     </summary>
 
     <p>Altamira provides engineering and analytic services to the defense, intelligence and homeland security
-        communities. As a lead engineer, I oversee the development of applications and services that support
-        the <strong>Department of Defense (DoD)</strong> and the <strong>Intelligence Community (IC)</strong>, mentor
-        junior developers, providing guidance on software development best practices and helping
-        them grow their technical skills.</p>
+        communities. As a member of the leadership team, I oversee the development of applications and services that
+        support the <strong>Department of Defense (DoD)</strong> and the <strong>Intelligence Community (IC)</strong>,
+        mentor junior developers, providing guidance on software development best practices and helping grow the
+        engineering teams technical skills.</p>
 
     <ul class="projects-list">
-        <li>Within my first three weeks, I took the initiative to establish the testing, building, staging, and
-            orchestration infrastructure for a containerized <strong>Rust</strong> service with <strong>Docker</strong>.
-            The service uses a <strong>consensus algorithm</strong> to task a network of server nodes that will
-            identify and track threats to <strong>National Security</strong>. In addition I introduced workflows to aid
-            in development and debugging, and improved the CI pipeline.
+        <li>I took the initiative in my first three weeks with Altamira to establish the testing, building, staging,
+            and orchestration infrastructure for a containerized <strong>Rust</strong> service with
+            <strong>Docker</strong>. The service uses a <strong>consensus algorithm</strong> to task a network of server
+            nodes that will identify and track threats to <strong>National Security</strong>. In addition I introduced
+            workflows to aid in development and debugging, and improved the CI pipeline.
         </li>
         <li>
-            Tasked with overseeing a full-stack application with <strong>Vue.js</strong> on the frontend and series of
-            microservices in <strong>Java</strong> on the backend. The priority is to trackdown the root cause of
-            existing performance problems in the backend microservices and mentoring junior developers in a refactoring
-            effort to improve performance.
+            Overseeing a full-stack application with <strong>Vue.js</strong>,
+            <strong>TypeScript</strong> and series of microservices in <strong>Java</strong> using <strong>Spring
+                Boot</strong>. I am currently mentoring junior developers in a refactoring effort to improve
+            performance. A few of the most recent performance improvements include:
+            <ul>
+                <li>Tuning <strong>PostgreSQL</strong> database schema and queries.</li>
+                <li>Optimizing round trips between frontend and numerous backend services.</li>
+                <li>Refactoring data collection usage with an eye towards a better use of data structures and sorting
+                    algorithms.</li>
+            </ul>
         </li>
         <li>
-            The expectation once I am fully onboarded is to oversea engineering efforts for a variety of projects which
-            include cloud-based solutions using <strong>React</strong> on the front end and <strong>GoLang</strong> on
-            the back end and other projects with tech stacks that include <strong>Java</strong> and <strong>Spring
-                Boot</strong>, <strong>Kubernetes</strong>, <strong>Amazon Web Services (AWS)</strong>,
-            <strong>CloudFront</strong>, <strong>CloudWatch</strong>, <strong>Cognito</strong>, and <strong>Lambda
+            Training the engineering team to work more efficiently by replacing development environments with
+            <strong>VSCode</strong> and <strong>Development Containers</strong>. This has allowed us to standardize the
+            development environment and reduce the time it takes to onboard new developers.
+        </li>
+        <li>
+            Managing relationships between Altamira and Defense Contractor engineering teams on various Next-Gen
+            Spacecraft projects for the Department of Defense. Using <strong>PlantUML</strong> to create architecture
+            and sequence diagrams for the applications and services we are developing.
+        </li>
+        <li>
+            Working with the <strong>Department of Defense (DoD)</strong> and the <strong>Intelligence
+                Community (IC)</strong> on a variety of projects that include <strong>cloud-based solutions</strong>
+            using <strong>React</strong>, <strong>GoLang</strong>, <strong>Java</strong>, <strong>Spring Boot</strong>,
+            <strong>Kubernetes</strong>, <strong>Amazon Web Services (AWS)</strong>, and <strong>Lambda
                 Microservices</strong>.
+        </li>
+        <li>
+            Planning various lunch and learn events to help the team learn new technologies and improve their skills.
         </li>
     </ul>
 </details>
