--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -14,7 +14,7 @@
         <li>SQL Server, MySQL, SQLite, MongoDB, DynamoDB</li>
         <li>Classic ASP</li>
         <li>Visual Studio Tools for Office (VSTO), OpenXML SDK</li>
-        <li>Windows Desktop Applications, Windows NT Services, Backend Services</li>
+        <li>Windows Desktop Applications, Windows Services, Backend Services</li>
         <li>Digital Rights Management (DRM/ADRMS)</li>
         <li>Bounds Checker, Purify, lint, RedGate ANTS</li>
         <li>Visual Basic 6.0 and Microsoft Visual FoxPro</li>
