--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -4,8 +4,8 @@
     </div>
     <div class="cover-letter-content">
         <p>Dear Hiring Manager,</p>
-        <p>I would like to introduce myself. My name is Tom DeMay. I am a Lead Senior Software Engineer
-            at Altamira Technologies Corporation working primarily in the national security space. I would like to tell
+        <p>I would like to introduce myself. My name is Tom DeMay. I am a Lead Senior Software Engineer and Manager with
+            Altamira Technologies Corporation working primarily in the national security space. I would like to tell
             you a little bit about me and why I feel I would be a great addition to your company. </p>
         <p>I have been a Software Engineer for over 30 years with a tremendously wide range of experiences;
             as an individual contributor, technical lead, and management. Ultimately I am a hands on engineer.
@@ -14,39 +14,40 @@
             lead them to accomplish any goal.</p>
         <p>I have a passion for the software factory process. I always look for ways to be more efficient, write
             maintainable code, improve team and organization communication, deliver consistent and reliable
-            estimates and mentor junior developers. Usually, I naturally evolve into a technical lead once I have
-            acquired the team's domain knowledge. I maintain a great relationship with all my previous employers
+            estimates and mentor junior developers. I maintain a great relationship with all my previous employers
             and team mates. I refactor relentlessly. I enjoy collaborating with other engineers and managers I
             can learn from. </p>
-        <p>I am aggressive about acquiring new skills and constantly learning. Fresh out of high school in 1989,
-            before I knew what I wanted to do, I studied and passed the tests to obtain a series 6 and 63 license
-            to sell securities within 2 months. In 2000, I got a private pilot's license within 3 months. I am a
-            self-taught musician having performed live for 11 years at a high level playing the piano, keyboards,
-            guitar, harmonica, banjo and even singing. I am a self-taught software engineer. By my late 20s I had
-            already been in engineering management, published by Advisor Publications and spoke on software
-            engineering principals at local user group meetings. When I was 30, I completed 4 years of school in one
-            year to get my Bachelors in Computer Science and maintained a GPA of 4.0. In 2003 I built
-            <a href="https://www.discountcasinogear.com/">www.discountcasinogear.com</a> as an experiment to learn
-            how to build web applications. It became one of the leading sites in its industry, consistently
-            generating half a million in annual revenue until I sold it for a profit in 2011. The site is still
-            there and claims to be the largest supplier of gaming equipment as many of the site's competitors
-            have come and gone.
+        <p>I aggressively acquire new skills and am constantly learning. Fresh out of high school in 1989, I studied and
+            passed the Series 6 and 63 licenses to sell securities within two months. In 2000, I earned my private
+            pilot's license in three months after my first flight lesson, completing the ground school on my own. Since
+            2009, I have been performing live, playing the piano, keyboards, guitar, harmonica, and banjo—all
+            self-taught.
+        </p>
+        <p>
+            As a self-taught software engineer, by my late 20s I managed other software engineers, published with
+            Advisor Publications, and spoke on software engineering principles at local user group meetings. At 30, I
+            completed four years of school in one year to earn my Bachelor's in Computer Science, maintaining a 4.0 GPA.
+            In 2003, I built <a href="https://www.discountcasinogear.com/">www.discountcasinogear.com</a> as an
+            experiment to learn web application development. It became one of the leading sites in its industry,
+            generating half a million in annual revenue until I sold it for a profit in 2011. The site continues to
+            operate and claims to be the largest supplier of gaming equipment, as many of its competitors have come and
+            gone.
         </p>
         <p>I have a reputation for having high standards, writing well designed code that is maintainable and I
-            work well with others. I received numerous awards for bailing out a number of failing projects and I hold a
+            work well with others. I received numerous awards for bailing out a number of failing projects and hold a
             patent. I mentor and develop the skills of junior and struggling engineers. I enjoy
             refactoring code. In one case I improved performance by 3,951%. In that particular case, code that
             initially took 6 hours to run before it failed, consuming all the computer's resources and crashing,
             was refactored to complete in 6 minutes using only 40MB of memory. </p>
         <p>As you can see, I am an aggressive learner and have a passion for continued education. Rust, GoLang, C/C++,
             C# .NET, Java, Python, Website development, SQL and NoSQL, various back end databases, and
-            cloud computing are just a few of the tech stacks I have taught myself. I am currently working on mastering
-            front-end web development with Java, Spring Boot, Angular, and React.js and currently working towards my
+            cloud computing are just a few of the tech stacks I have taught myself. I am currently working on
+            web applications with Java, Spring Boot, and React.js and currently working towards my
             AWS and Azure certifications</p>
         <p>As you can tell I am very proud of my history and accomplishments. I am excited to share with you my
             many success stories and even some not so successful stories that became learning opportunities for
             me. I honestly believe I can fit in well in any organization in a variety of different roles due to
-            my passion for software engineering and for learning. I am open to any kind of development. Above
+            my passion for software engineering and learning. I am open to any kind of development. Above
             all, I like being creative, collaborating with others and learning, which I believe would to be a
             tremendous asset to your organization.</p>
         <p>Thank you for your time and your consideration. Sincerely,</p>
