Hiding headline on resume since I'm not looking for work.

--- a/_includes/resume/headline.html
+++ b/_includes/resume/headline.html
@@ -1,4 +1,4 @@
-<div class="shadowbox">
+<div class="shadowbox resume-headline">
     <h1>Resume</h1>
     <p>I am on the lookout for an opportunity to join a forward-thinking team that can tap
         into my software technical leadership and broad solution experience. With my strong work
