--- a/_sass/altamira.scss
+++ b/_sass/altamira.scss
@@ -142,41 +142,54 @@ a {
 // //     padding: 3px 5px 3px 0;
 // // }
 
-details {
-    margin: 5px 0 ;
-}
+// // details {
+// //     margin: 5px 0 ;
+// // }
 
-summary::-webkit-details-marker {
-    display: none;
-}
+// // summary::-webkit-details-marker {
+// //     display: none;
+// // }
+
+// details {
+//     // font-size:larger;
+//     // justify-content: space-between;
+//     // align-items: first baseline;
+//     // position: relative;
+//     // list-style-type: none;
+//     // // // padding-left: 0;
+//     // background-image: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+//     // padding: 5px;
+//     // margin: 0;
+//     // color: #fff;
+// }
 
 details summary {
     font-size:larger;
-    justify-content: space-between;
-    align-items: first baseline;
-    position: relative;
+    // justify-content: space-between;
+    // align-items: first baseline;
+    // position: relative;
     list-style-type: none;
     background-image: linear-gradient(to right, var(--primary-color), var(--secondary-color));
     padding: 5px;
     margin: 5px 0px 5px 0px;
-    color: #fff;
+    // color: #fff;
 }
 
-summary span.left {
-    position: absolute;
-}
+// // summary span.left {
+// //     position: absolute;
+// // }
 
-summary span.right {
-    position: absolute;
-    right: 5px;
-    color: #fff;
-}
+// // summary span.right {
+// //     position: absolute;
+// //     right: 5px;
+// //     color: #fff;
+// // }
 
-// details > div,
-// details > ul,
-// details > p {
-//     margin: 0;
-// }
+// // details > div,
+// // details > ul,
+// // details > p {
+// //     margin: 0;
+// // }
 
 // // details > p {
 // //     padding: 3px 0px 3px 5px;
@@ -185,10 +198,10 @@ summary span.right {
 // //     padding-left: 5px;
 // // }
 
-// details > ul {
-//     margin: 3px 0 3px 0;
-//     padding: 10px;
-// }
+// // details > ul {
+// //     margin: 3px 0 3px 0;
+// //     padding: 10px;
+// // }
 
 // // .skills-list,
 // // .hobbies-list {
