--- a/_includes/resume/certifications.html
+++ b/_includes/resume/certifications.html
@@ -1,6 +1,6 @@
 <div class="no-page-break">
     <details id="certifications">
-        <summary>Certifications</summary>
+        <summary class="sectionheader">Certifications</summary>
         <ul class="two-column-list">
             <li> <span class="left">Currently pursuing AWS and Azure Certifications</span> <span class="right">In
                     Progress</span> </li>
