--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -1,5 +1,5 @@
 <details id="education">
-    <summary>Education</summary>
+    <summary class="sectionheader">Education</summary>
     <ul class="two-column-list">
         <li>
             <span class="left">
