--- a/_includes/resume/employmenthistory.html
+++ b/_includes/resume/employmenthistory.html
@@ -1,5 +1,5 @@
 <details open> <a name="employment"></a> <a name="history"></a> <a name="employmenthistory"></a>
-    <summary>Employment History</summary>
+    <summary class="sectionheader">Employment History</summary>
     <div>
         {% include resume/employmenthistory/altamira.html %}
         {% include resume/employmenthistory/amazon.html %}
