--- a/_includes/resume/employmenthistory/gigatrust.html
+++ b/_includes/resume/employmenthistory/gigatrust.html
@@ -65,7 +65,7 @@
         </li>
         <li>Implemented a process for delivering code to the quality assurance group,
             including a standard for regularly scheduled drops, <strong>unit
-                tests</strong>, and <strong>test plans</strong>. <br> <br> This
+                tests</strong>, and <strong>test plans</strong>. This
             approach improved the efficiency of our development cycle and
             ensured a higher level of code quality. By establishing clear guidelines and
             milestones, we were able to effectively track and manage the progress of
