--- a/_includes/resume/hobbies.html
+++ b/_includes/resume/hobbies.html
@@ -1,6 +1,6 @@
 <div class="no-page-break">
     <details id="hobbies"> <a name="interests"></a> <a name="hobbiesandinterests"></a>
-        <summary>Hobbies and Interests</summary>
+        <summary class="sectionheader">Hobbies and Interests</summary>
         <ul class="hobbies-list">
             <li>Coding</li>
             <li>Refactoring</li>
