--- a/_includes/resume/publications.html
+++ b/_includes/resume/publications.html
@@ -1,6 +1,6 @@
 <div class="no-page-break">
     <details id="publications">
-        <summary>Publications</summary>
+        <summary class="sectionheader">Publications</summary>
         <ul class="two-column-list">
             <li> <span class="left">Speed Up Client-Server Applications with Server Side Cursors
                     (Part Two)</span> <span class="right">September, 1999</span> </li>
