--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -1,5 +1,5 @@
 <details open> <a name="professional"></a>
-    <summary id="professionalskills">Professional Skills</summary>
+    <summary id="professionalskills" class="sectionheader">Professional Skills</summary>
     <ul class="skills-list">
         <li>C/C++ 2.0, Rust, Golang</li>
         <li>AWS, Azure</li>
