--- a/_includes/resume/summary.html
+++ b/_includes/resume/summary.html
@@ -1,5 +1,5 @@
 <details open>
-    <summary>Summary</summary>
+    <summary class="sectionheader">Summary</summary>
     <p> With over 30 years of experience as a software engineer, my expertise extends beyond
         technical knowledge. I have a comprehensive understanding of the entire software
         lifecycle, covering concept development, implementation, testing, delivery, and user
