--- a/_sass/print.scss
+++ b/_sass/print.scss
@@ -7,73 +7,71 @@
     visibility: hidden;
 }
 
-// /* hide everything that shouldn't print */
+/* hide everything that shouldn't print */
 header, 
 footer, 
-.headshot,
-.page2-headshot,
-// .soundcloudplaylist, 
-// .shadowbox > h1,
-.left-pane > .links, 
-.resume-headline
-{
+.cover-letter,
+.soundcloudplaylist, 
+.shadowbox > h1,
+.left-pane > .links {
     display: none;
 }
 
-// // .local-headshot {
-// //     width: 125px;
-// // }
-// // .remote-headshot {
-// //     width: 100px;
-// // }
-// .headshot {
-//     // top: 0px;
-//     display: none;
-//     // float: left;
-//     // position: absolute;
-//     // height: auto;
-//     // padding: 5px;
-//     // border-radius: 50%;
-// }
+.local-headshot {
+    width: 125px;
+}
+.remote-headshot {
+    width: 100px;
+}
+.headshot {
+    top: 0px;
+    display: block;
+    float: left;
+    position: absolute;
+    height: auto;
+    padding: 5px;
+    border-radius: 50%;
+}
 
 /* Reset styles */
 h1,
 h2,
-h3 {
+h3, 
+p {
     margin: 0px;
 }
 
 body {
-    // margin: 0 10px 0 10px;
+    margin: 0 10px 0 10px;
     font-family: Arial, sans-serif;
-    // padding: 20px;
+    padding: 20px;
     /* box-sizing: border-box; */
-    // padding: 0;
+    padding: 0;
     font-size: 0.79em;
 }
 
 h1 {
     font-size: xx-large;
-    // color: var(--primary-color);
+    color: var(--primary-color);
 }
-// h2 {
-//     font-size: large;
-//     // color: var(--primary-color);
-// }
-// // h3 {
-// //     color: var(--primary-color);
-// // }
+h2 {
+    font-size: large;
+    color: var(--primary-color);
+}
+h3 {
+    color: var(--primary-color);
+}
 
 a {
     text-decoration: none;
-    // color: var(--primary-color);
-    // font-weight: bolder;
+    color: var(--primary-color);
+    font-weight: bolder;
 }
 
-// a:visited {
-//     font-weight: bolder;
-//     // color: var(--primary-color);
-// }
+a:visited {
+    font-weight: bolder;
+    color: var(--primary-color);
+}
 
 .page-break {
     border: none;
@@ -87,16 +85,16 @@ a {
 
 .headercontent>.address {
     text-align: center;
-    // font-size: small;
+    font-size: small;
 }
 
-// // .headercontent > .links {
-// //     width: 100%;
-// //     display: flex;
-// //     justify-content: center;
-// //     align-items: center; 
-// //     text-align: center;
-// // }
+.headercontent > .links {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    text-align: center;
+}
 
 .headercontent > .links > .table {
     display: grid;
@@ -104,43 +102,42 @@ a {
     gap: 0 10px;
 }
 
-// // .headercontent > .links > .table >.cell {
-// //     padding: 0;
-// //     margin: 0;
-// // }
+.headercontent > .links > .table >.cell {
+    padding: 0;
+    margin: 0;
+}
 
 .headercontent > .links > .table > .column-one {
     text-align: right;
 }
 
-// // .headercontent > .links > .table > .column-two {
-// //     text-align: left;
-// // }
+.headercontent > .links > .table > .column-two {
+    text-align: left;
+}
 
-// // .cover-letter {
-// //     padding: 0;
-// //     margin: 0;
-// // }
+.cover-letter {
+    padding: 0;
+    margin: 0;
+}
 
-// // .cover-letter-content {
-// //     margin-top: 20px;
-// //     // padding: 0 10px 0 10px;
-// //     // font-size: 1.2em;
-// // }
+.cover-letter-content {
+    margin-top: 20px;
+    padding: 0 10px 0 10px;
+    font-size: 1.2em;
+}
+.cover-letter-content > p {
+    margin: 8px 0 8px 0;
+}
 
-// // .cover-letter-content > p {
-// //     margin: 8px 0 8px 0;
-// // }
+.shadowbox {
+    font-size: 1.1em;
+    padding: 10px;
+}
 
-// // .shadowbox {
-// //     font-size: 1.1em;
-// //     // padding: 10px;
-// // }
-
-// // .shadowbox > p {
-// //     margin: 0;
-// //     padding: 3px 5px 3px 0;
-// // }
+.shadowbox > p {
+    margin: 0;
+    padding: 3px 5px 3px 0;
+}
 
 details {
     margin: 5px 0 ;
@@ -156,9 +153,10 @@ details summary {
     align-items: first baseline;
     position: relative;
     list-style-type: none;
+    padding-left: 0;
     background-image: linear-gradient(to right, var(--primary-color), var(--secondary-color));
-    padding: 5px;
-    margin: 5px 0px 5px 0px;
+    padding: 3px;
+    margin: 0;
     color: #fff;
 }
 
@@ -172,150 +170,151 @@ summary span.right {
     color: #fff;
 }
 
-// details > div,
-// details > ul,
-// details > p {
-//     margin: 0;
-// }
+details > div,
+details > ul,
+details > p {
+    margin: 0;
+}
 
-// // details > p {
-// //     padding: 3px 0px 3px 5px;
-// // }
-// // details > div {
-// //     padding-left: 5px;
-// // }
+details > p {
+    padding: 3px 0px 3px 5px;
+}
+details > div {
+    padding-left: 5px;
+}
 
-// details > ul {
-//     margin: 3px 0 3px 0;
-//     padding: 10px;
-// }
+details > ul {
+    margin: 3px 0 3px 0;
+    padding: 10px;
+}
 
-// // .skills-list,
-// // .hobbies-list {
-// //     display: grid;
-// //     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-// //     grid-gap: 2px;
-// //     align-items: flex-start;
-// //     list-style-position: outside;
-// //     padding: 3px;
-// //     margin: 0 0 0 20px;
-// // }
+.skills-list,
+.hobbies-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 2px;
+    align-items: flex-start;
+    list-style-position: outside;
+    padding: 3px;
+    margin: 0 0 0 20px;
+}
 
-// // .skills-list>li,
-// // .hobbies-list>li {
-// //     break-inside: avoid-page;
-// //     padding: 0 20px 0 0;
-// //     line-height: 15px;
-// //     font-size: 0.95em;
-// // }
+.skills-list>li,
+.hobbies-list>li {
+    break-inside: avoid-page;
+    padding: 0 20px 0 0;
+    line-height: 15px;
+    font-size: 0.95em;
+}
 
-// // .projects-list {
-// //     // list-style-type: none;
-// //     // display: grid;
-// //     // grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-// //     // grid-gap: 10px;
-// //     padding: 5px;
-// // }
+.projects-list {
+    list-style-type: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 10px;
+    padding: 0 5px 0 0;
+}
 
-// // .projects-list ul {
-// //     list-style-type: square;
-// //     padding: 0 0 0 20px;
-// // }
+.projects-list ul {
+    list-style-type: square;
+    padding: 0 0 0 20px;
+}
 
-// // .projects-list>li {
-// //     break-inside: avoid-page;
-// //     border-radius: 8px;
-// //     padding: 5px;
-// //     box-sizing: content-box;
-// //     border: 1px solid #ccc;
-// //     margin-bottom: 5px;
-// //     background: linear-gradient(to right, #fff, #ccc);
-// //     position: relative;
-// // }
+.projects-list>li {
+    break-inside: avoid-page;
+    border-radius: 8px;
+    padding: 5px;
+    box-sizing: content-box;
+    border: 1px solid #ccc;
+    margin-bottom: 5px;
+    background: linear-gradient(to right, #fff, #ccc);
+    position: relative;
+}
 
-// // .projects-list li ul {
-// //     padding: 0 0 0 20px;
-// // }
+.projects-list li ul {
+    padding: 0 0 0 20px;
+}
 
-// // .two-column-list {
-// //     list-style-type: none;
-// //     padding: 0;
-// //     margin: 0;
-// // }
+.two-column-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 
-// // .two-column-list li {
-// //     display: flex;
-// //     justify-content: space-between;
-// //     margin: 0;
-// //     border: 1px solid #ccc;
-// //     box-sizing: content-box;
-// //     background-color: #ddd;
-// //     padding: 5px;
-// //     border-radius: 8px;
-// //     background-image: linear-gradient(to right, #fff, #ccc);
-// // }
+.two-column-list li {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    border: 1px solid #ccc;
+    box-sizing: content-box;
+    background-color: #ddd;
+    padding: 5px;
+    border-radius: 8px;
+    background-image: linear-gradient(to right, #fff, #ccc);
+}
 
-// // .two-column-list li .left {
-// //     text-align: left;
-// // }
+.two-column-list li .left {
+    text-align: left;
+}
 
-// // .two-column-list li .right {
-// //     text-align: right;
-// //     padding-right: 5px;
-// // }
+.two-column-list li .right {
+    text-align: right;
+    padding-right: 5px;
+}
 
 @page {
     size: auto;
     margin: 20px;
 }
 
-// // .page2-header {
-// //     width: 100%;
-// //     display: flex;
-// //     justify-content: center;
-// //     align-items: center; 
-// //     text-align: center;
-// //     // padding: 0 10px 0 10px;
-// // }
+@page :bottom { content: none; } 
+
+.page2-header {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    text-align: center;
+}
 
 
-// .page2-headshot {
-//     display: none;
-//     // padding: 5px;
-//     // border-radius: 50%;
-// }
+.page2-headshot {
+    padding: 5px;
+    border-radius: 50%;
+}
 
-// // .page2-header > .table {
-// //     display: grid;
-// //     grid-template-columns: 100px auto 100px;
-// //     gap: 0 10px;
-// //     width: 100%;
-// // }
+.page2-header > .table {
+    display: grid;
+    grid-template-columns: 100px auto 100px;
+    gap: 0 10px;
+    width: 100%;
+}
 
-// // .page2-header > .table >.cell {
-// //     padding: 0;
-// //     margin: 0;
-// // }
+.page2-header > .table >.cell {
+    padding: 0;
+    margin: 0;
+}
 
-// // .page2-header > .table > .column-one {
-// //     text-align: left;
-// // }
+.page2-header > .table > .column-one {
+    text-align: left;
+}
 
 .page2-header > .table > .column-two {
     text-align: center;
 }
 
-// // .page2-header > .table > .column-three {
-// //     text-align: right;
-// // }
+.page2-header > .table > .column-three {
+    text-align: right;
+}
 
-// // .page2-header .links {
-// //     width: 100%;
-// //     display: flex;
-// //     justify-content: center;
-// //     align-items: center; 
-// //     text-align: center;
-// // }
+
+.page2-header .links {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    text-align: center;
+}
 
 .page2-header .links > .table {
     display: grid;
@@ -323,10 +322,10 @@ summary span.right {
     gap: 0 10px;
 }
 
-// // .page2-header .links > .table >.cell {
-// //     padding: 0;
-// //     margin: 0;
-// // }
+.page2-header .links > .table >.cell {
+    padding: 0;
+    margin: 0;
+}
 
 .page2-header .links > .table > .column-one {
     text-align: right;
@@ -336,26 +335,26 @@ summary span.right {
     text-align: left;
 }
 
-// // .code-snippet {
-// //     padding: 10px;
-// //     font-family: 'Courier New', monospace;
-// //     font-size: 14px;
-// //   }
+.code-snippet {
+    padding: 10px;
+    font-family: 'Courier New', monospace;
+    font-size: 14px;
+  }
   
-// //   .code-snippet pre {
-// //     padding: 10px;
-// //     border-radius: 4px;
-// //     color: #000;
-// //     white-space: pre-wrap;
-// //     overflow-x: auto;
-// //     background-color: #ccc;
-// //   }
+  .code-snippet pre {
+    padding: 10px;
+    border-radius: 4px;
+    color: #000;
+    white-space: pre-wrap;
+    overflow-x: auto;
+    background-color: #ccc;
+  }
 
-// //  .code-snippet pre code {
-// //     display: block;
-// //   }
+ .code-snippet pre code {
+    display: block;
+  }
 
-// //   .resume-headline {
-// //     display: none;
-// //   }
+  .resume-headline {
+    display: none;
+  }
   
