formatting and some minor content tweaks

--- a/_includes/resume/certifications.html
+++ b/_includes/resume/certifications.html
@@ -2,11 +2,23 @@
     <details id="certifications">
         <summary class="sectionheader">Certifications</summary>
         <ul class="two-column-list">
-            <li> <span class="left">Currently pursuing AWS and Azure Certifications</span> <span class="right">In
-                    Progress</span> </li>
-            <li> <span class="left">Microsoft Certified Solution Developer (MCSD)</span> <span class="right">April,
-                    1998</span> </li>
-            <li> <span class="left">Microsoft Certified Professional (MCP)</span> <span class="right">March, 1998</span>
+            <li>
+                <div class="flexdiv">
+                    <span class="left">Currently pursuing AWS and Azure Certifications</span>
+                    <span class="right">In Progress</span>
+                </div>
+            </li>
+            <li>
+                <div class="flexdiv">
+                    <span class="left">Microsoft Certified Solution Developer (MCSD)</span>
+                    <span class="right">April, 1998</span>
+                </div>
+            </li>
+            <li>
+                <div class="flexdiv">
+                    <span class="left">Microsoft Certified Professional (MCP)</span>
+                    <span class="right">March, 1998</span>
+                </div>
             </li>
         </ul>
     </details>
