--- a/_includes/resume/employmenthistory/amazon.html
+++ b/_includes/resume/employmenthistory/amazon.html
@@ -4,12 +4,12 @@
             VA</span><br> January 2020 - September 2023<br> <i>Senior
             Software Engineer (SDE II)</i>
     </summary>
-    <p>I hold a senior position on the <strong>EC2</strong> Zonal Interface Management
+    <p>I held a senior position on the <strong>EC2</strong> Zonal Interface Management
         (ZIM) team. ZIM plays a critical role in managing all network interfaces and IP addresses
         for <strong>EC2</strong>. It operates at a low level and
         relies on <strong>AWS</strong> technologies such as <strong>DynamoDB</strong>
         and <strong>S3</strong>. Our development environment primarily consists of
-        <strong>Linux</strong>, and we utilize <strong>Java</strong>,
+        <strong>Linux</strong>, and we used <strong>Java</strong>,
         <strong>Ruby</strong>, and <strong>Scala</strong> for coding purposes.
     </p>
     <ul class="projects-list">
