--- a/_includes/resume/patents.html
+++ b/_includes/resume/patents.html
@@ -2,9 +2,13 @@
     <details id="patents">
         <summary class="sectionheader">Patents</summary>
         <ul class="two-column-list">
-            <li> <span class="left"> US Patent 7,233,957 B1<br> "Method and Apparatus for
-                    identifying and Processing Changes to Management Information" </span> <span class="right"> June,
-                    2007 </span> </li>
+            <li>
+                <div class="flexdiv">
+                    <span class="left"> US Patent 7,233,957 B1<br> "Method and Apparatus for
+                        identifying and Processing Changes to Management Information" </span>
+                    <span class="right"> June, 2007 </span>
+                </div>
+            </li>
         </ul>
     </details>
 </div>
