--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -4,7 +4,7 @@
     </div>
     <div class="cover-letter-content">
         <p>Dear Hiring Manager,</p>
-        <p>I would like to introduce myself. My name is Tom DeMay. I am a Lead Senior Software Engineer and Manager with
+        <p>I would like to introduce myself. My name is Tom DeMay. I am a Principal Software Engineer and Manager with
             Altamira Technologies Corporation working primarily in the national security space. I would like to tell
             you a little bit about me and why I feel I would be a great addition to your company. </p>
         <p>I have been a Software Engineer for over 30 years with a tremendously wide range of experiences;
@@ -14,17 +14,14 @@
             lead them to accomplish any goal.</p>
         <p>I have a passion for the software factory process. I always look for ways to be more efficient, write
             maintainable code, improve team and organization communication, deliver consistent and reliable
-            estimates and mentor junior developers. I maintain a great relationship with all my previous employers
-            and team mates. I refactor relentlessly. I enjoy collaborating with other engineers and managers I
-            can learn from. </p>
+            estimates and mentor junior developers. I refactor relentlessly.</p>
         <p>I aggressively acquire new skills and am constantly learning. Fresh out of high school in 1989, I studied and
             passed the Series 6 and 63 licenses to sell securities within two months. In 2000, I earned my private
             pilot's license in three months after my first flight lesson, completing the ground school on my own. Since
             2009, I have been performing live, playing the piano, keyboards, guitar, harmonica, and banjo—all
             self-taught.
         </p>
-        <p>
-            As a self-taught software engineer, by my late 20s I managed other software engineers, published with
+        <p>As a self-taught software engineer, by my late 20s I managed other software engineers, published with
             Advisor Publications, and spoke on software engineering principles at local user group meetings. At 30, I
             completed four years of school in one year to earn my Bachelor's in Computer Science, maintaining a 4.0 GPA.
             In 2003, I built <a href="https://www.discountcasinogear.com/">www.discountcasinogear.com</a> as an
@@ -34,8 +31,9 @@
             gone.
         </p>
         <p>I have a reputation for having high standards, writing well designed code that is maintainable and I
-            work well with others. I received numerous awards for bailing out a number of failing projects and hold a
-            patent. I mentor and develop the skills of junior and struggling engineers. I enjoy
+            work well with others. I maintain a great relationship with all my previous managers and co-workers and
+            enjoy collaborating with other team mates I can learn from. I received numerous awards for bailing out a
+            number of failing projects. I mentor and develop the skills of junior and struggling engineers. I enjoy
             refactoring code. In one case I improved performance by 3,951%. In that particular case, code that
             initially took 6 hours to run before it failed, consuming all the computer's resources and crashing,
             was refactored to complete in 6 minutes using only 40MB of memory. </p>
