minor content and format tweaks and support bullet lists

--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -1,104 +1,121 @@
 <details id="education">
-    <summary>Education</summary>
+    <summary class="sectionheader">Education</summary>
     <ul class="two-column-list">
         <li>
-            <span class="left">
-                Post Graduate Program in Cloud Computing<br>
-                University of Texas at Austin<br>
-                Texas McCombs School of Business<br>
-                Post Graduate course to prepare students to get their <strong>AWS</strong> and
-                <strong>Azure certifications</strong> and expose them to other cloud providers
-                such as <strong>Google and IBM</strong>.<br>
-                4.2 GPA
-            </span>
-            <span class="right">March 2023 - October 2023</span>
+            <div class="flexdiv">
+                <span class="left">
+                    Post Graduate Program in Cloud Computing<br>
+                    University of Texas at Austin<br>
+                    Texas McCombs School of Business<br>
+                    Post Graduate course to prepare students to get their <strong>AWS</strong> and
+                    <strong>Azure certifications</strong> and expose them to other cloud providers
+                    such as <strong>Google and IBM</strong>.<br>
+                    4.2 GPA
+                </span>
+                <span class="right">March 2023 - October 2023</span>
+            </div>
         </li>
         <li>
-            <span class="left">
-                Spring Boot 3, Spring 6, Spring REST API, Spring MVC, Spring Security, Thymeleaf, JPA & Hibernate<br>
-                <a target="_blank" href="https://www.udemy.com/course/spring-hibernate-tutorial/"
-                    class="link-with-indicator">
-                    udemy.com/course/spring-hibernate-tutorial/
-                    <i class="fas fa-external-link-alt fa-xs"></i>
-                </a>
-            </span>
-            <span class="right">
-                Present
-            </span>
-        </li>
-
-        <li>
-            <span class="left">
-                Go: The Complete Developer's Guide (Golang)<br>
-                <a target="_blank" href="https://www.udemy.com/course/go-the-complete-developers-guide"
-                    class="link-with-indicator">
-                    udemy.com/course/go-the-complete-developers-guide
-                    <i class="fas fa-external-link-alt fa-xs"></i>
-                </a>
-            </span>
-            <span class="right">
-                October, 2023
-            </span>
+            <div class="flexdiv">
+                <span class="left">
+                    Spring Boot 3, Spring 6, Spring REST API, Spring MVC, Spring Security, Thymeleaf, JPA &
+                    Hibernate<br>
+                    <a target="_blank" href="https://www.udemy.com/course/spring-hibernate-tutorial/"
+                        class="link-with-indicator">
+                        udemy.com/course/spring-hibernate-tutorial/
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a>
+                </span>
+                <span class="right">
+                    Present
+                </span>
+            </div>
         </li>
 
         <li>
-            <span class="left">
-                Working with React and Go (Golang)<br>
-                <a target="_blank" href="https://www.udemy.com/course/working-with-react-and-go-golang/"
-                    class="link-with-indicator">
-                    udemy.com/course/working-with-react-and-go-golang/
-                    <i class="fas fa-external-link-alt fa-xs"></i>
-                </a>
-            </span>
-            <span class="right">
-                October, 2023
-            </span>
+            <div class="flexdiv">
+                <span class="left">
+                    Go: The Complete Developer's Guide (Golang)<br>
+                    <a target="_blank" href="https://www.udemy.com/course/go-the-complete-developers-guide"
+                        class="link-with-indicator">
+                        udemy.com/course/go-the-complete-developers-guide
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a>
+                </span>
+                <span class="right">
+                    October, 2023
+                </span>
+            </div>
+        </li>
+
+        <li>
+            <div class="flexdiv">
+                <span class="left">
+                    Working with React and Go (Golang)<br>
+                    <a target="_blank" href="https://www.udemy.com/course/working-with-react-and-go-golang/"
+                        class="link-with-indicator">
+                        udemy.com/course/working-with-react-and-go-golang/
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a>
+                </span>
+                <span class="right">
+                    October, 2023
+                </span>
+            </div>
         </li>
         <li>
-            <span class="left">
-                React Styled Components<br>
-                <a target="_blank" href="https://www.udemy.com/course/react-styled-components">
-                    udemy.com/course/react-styled-components/
-                    <i class="fas fa-external-link-alt fa-xs"></i>
-                </a>
-            </span>
-            <span class="right">
-                April, 2023
-            </span>
+            <div class="flexdiv">
+                <span class="left">
+                    React Styled Components<br>
+                    <a target="_blank" href="https://www.udemy.com/course/react-styled-components">
+                        udemy.com/course/react-styled-components/
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a>
+                </span>
+                <span class="right">
+                    April, 2023
+                </span>
+            </div>
         </li>
         <li>
-            <span class="left">
-                Deploying Java Spring Apps Online to Amazon Cloud (AWS)<br>
-                <a target="_blank" href="https://www.udemy.com/course/deploy-java-spring-apps-online">
-                    udemy.com/course/deploy-java-spring-apps-online/
-                    <i class="fas fa-external-link-alt fa-xs"></i>
-                </a>
-            </span>
-            <span class="right">
-                March, 2023
-            </span>
+            <div class="flexdiv">
+                <span class="left">
+                    Deploying Java Spring Apps Online to Amazon Cloud (AWS)<br>
+                    <a target="_blank" href="https://www.udemy.com/course/deploy-java-spring-apps-online">
+                        udemy.com/course/deploy-java-spring-apps-online/
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a>
+                </span>
+                <span class="right">
+                    March, 2023
+                </span>
+            </div>
         </li>
         <li>
-            <span class="left">
-                Create web app with Angular 12, .NET Core Web API & Mongo DB<br>
-                <a target="_blank"
-                    href="https://www.udemy.com/course/create-web-app-with-angular-12-net-core-web-api-mongo-db">
-                    udemy.com/course/create-web-app-with-angular-12-net-core-web-api-mongo-db/
-                    <i class="fas fa-external-link-alt fa-xs"></i>
-                </a>
-            </span>
-            <span class="right">
-                March, 2023
-            </span>
+            <div class="flexdiv">
+                <span class="left">
+                    Create web app with Angular 12, .NET Core Web API & Mongo DB<br>
+                    <a target="_blank"
+                        href="https://www.udemy.com/course/create-web-app-with-angular-12-net-core-web-api-mongo-db">
+                        udemy.com/course/create-web-app-with-angular-12-net-core-web-api-mongo-db/
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a>
+                </span>
+                <span class="right">
+                    March, 2023
+                </span>
+            </div>
         </li>
         <li>
-            <span class="left">
-                Strayer University - Bachelors in Computer Science<br>
-                <i>Completed 4 years of college in one year by teaching myself the material and testing out of
-                    classes.</i><br>
-                Summa Cum Laude (4.0 GPA)<br>
-            </span>
-            <span class="right">March 1998 - March 1999</span>
+            <div class="flexdiv">
+                <span class="left">
+                    Strayer University - Bachelors in Computer Science<br>
+                    <i>Completed 4 years of college in one year by teaching myself the material and testing out of
+                        classes.</i><br>
+                    Summa Cum Laude (4.0 GPA)<br>
+                </span>
+                <span class="right">March 1998 - March 1999</span>
+            </div>
         </li>
     </ul>
 </details>
