--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -500,8 +500,12 @@ footer a:hover {
   padding-right: 10px;
 }
 
+.flexdiv {
+    display: flex;
+    justify-content: space-between;
+}
+
 .two-column-list li {
-  display: flex;
   justify-content: space-between;
   border: 1px solid #ccc;
   box-sizing: border-box;
