adding C++ Associate Programmer to resume

--- a/_includes/resume/certifications.html
+++ b/_includes/resume/certifications.html
@@ -4,6 +4,11 @@
         <ul class="two-column-list">
             <li>
                 <div class="flexdiv">
+                    <span class="left">C++ Associate Programmer, C++ Institute</span>
+                    <span class="right">July, 2014</span>
+            </li>
+            <li>
+                <div class="flexdiv">
                     <span class="left">Currently pursuing AWS and Azure Certifications</span>
                     <span class="right">In Progress</span>
                 </div>
