Adding Top Secret Security clearance

--- a/_includes/aboutme/professionalexperience.html
+++ b/_includes/aboutme/professionalexperience.html
@@ -1,5 +1,6 @@
 <details open id="professionalexperience">
-    <summary>Professional Experience</summary> <a name="professional"></a>
+    <summary>Professional Experience</summary>
+    <a name="professional"></a>
     <p> With nearly 30 years of experience as a Software Engineer, I have accumulated a diverse
         range of expertise. Throughout my career, I have served in various roles, including
         individual contributor, technical lead, and management positions. While I possess a deep
@@ -38,13 +39,15 @@
         improvements, such as a 3,951% boost in one instance. Previously, code that originally
         took 6 hours to run before crashing due to resource consumption was refactored to
         complete in just 6 minutes, utilizing only 40MB of memory. </p>
-    <p> As evident from my journey, I possess an unwavering commitment to continuous education.
+    <p> As evident from my journey, I possess an unwavering commitment to continuous education. I am language agnostic
+        as I have worked with every leading language and platform throughout my career.
         I have taught myself a multitude of technologies, including C/C++, .NET, C#, Windows and
         Linux platforms, Java, Python, PowerShell, bash, Ruby, Regular Expressions, classic ASP,
         HTML/CSS, SQL and NoSQL databases, and cloud computing, to name a few. Currently, I am
         actively honing my skills in Typescript, Java Spring, GoLang and Rust. I completed a post graduate program in
         Cloud Computing from the University of Texas, earning a 4.3 GPA. I am also in the process of obtaining several
-        Amazon AWS and Microsoft Azure certifications, with future plans to delve into machine learning and AI. I am in
-        the process of obtaining my National Security clearance.</p>
+        Amazon AWS and Microsoft Azure certifications, with future plans to delve into machine learning and AI.
+        Additionally, I hold an active Top Secret security clearance, underscoring my commitment to protecting our
+        nation.
     </p>
 </details>
