--- a/_includes/resume/certifications.html
+++ b/_includes/resume/certifications.html
@@ -4,10 +4,15 @@
         <ul class="two-column-list">
             <li>
                 <div class="flexdiv">
-                    <span class="left">Currently pursuing AWS and Azure Certifications</span>
+                    <span class="left">Currently pursuing AWS Certification</span>
                     <span class="right">In Progress</span>
                 </div>
             </li>
+            <li>
+                <div class="flexdiv">
+                    <span class="left">Active Top Secret Security Clearance</span>
+                    <span class="right">July, 2024</span>
+                </div>
             <li>
                 <div class="flexdiv">
                     <span class="left">C++ Associate Programmer, C++ Institute</span>
