--- a/_includes/resume/employmenthistory/altamira.html
+++ b/_includes/resume/employmenthistory/altamira.html
@@ -1,16 +1,17 @@
 <details>
     <summary id="altamira">
-        <span class="left"><strong>Altamira Technologies Coproration</strong></span>
+        <span class="left"><strong>Altamira Technologies Corporation</strong></span>
         <span class="right">McLean, Virginia</span>
         <br>October 2023 - Present<br>
         <i>SWEIV - Manager, Principal Software Engineer Lead</i>
     </summary>
 
-    <p>Altamira provides engineering and analytic services to the defense, intelligence and homeland security
+    <p>Altamira provides engineering and analytic services to the defense, intelligence, and homeland security
         communities. As a member of the leadership team, I oversee the development of applications and services that
         support the <strong>Department of Defense (DoD)</strong> and the <strong>Intelligence Community (IC)</strong>,
         mentor junior developers, providing guidance on software development best practices and helping grow the
-        engineering teams technical skills.</p>
+        engineering team's technical skills. My role requires an active Top Secret security clearance, underscoring
+        my commitment to advancing national security.</p>
 
     <ul class="projects-list">
         <li>I took the initiative in my first three weeks with Altamira to establish the testing, building, staging,
