--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -1,6 +1,7 @@
 <details open> <a name="professional"></a>
     <summary id="professionalskills" class="sectionheader">Professional Skills</summary>
     <ul class="skills-list">
+        <li>Active Top Secret security clearance</li>
         <li>C/C++ 2.0, Rust, Golang</li>
         <li>AWS, Azure</li>
         <li>Python, PowerShell, bash</li>
