--- a/_includes/sitelayout/leftpane.html
+++ b/_includes/sitelayout/leftpane.html
@@ -15,6 +15,7 @@
         <br><br>
         <h3>Top Skills:</h3>
         <ul>
+            <li><a href="#professionalskills">Active Top Secret<br>security clearance</a></li>
             <li><a href="#professionalskills">C/C++<br>(since mid 90s)</a></li>
             <li><a href="#professionalskills">GoLang, Rust (since 2020s)</a></li>
             <li><a href="#professionalskills">C# (since early 2000s)</a></li>
