adding kubernetes course and docker skills

--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -18,27 +18,52 @@
         <li>
             <div class="flexdiv">
                 <span class="left">
-                    Spring Boot 3, Spring 6, Spring REST API, Spring MVC, Spring Security, Thymeleaf, JPA &
-                    Hibernate<br>
-                    <a target="_blank" href="https://www.udemy.com/course/spring-hibernate-tutorial/"
+                    Strayer University - Bachelors in Computer Science<br>
+                    <i>Completed 4 years of college in one year by teaching myself the material and testing out of
+                        classes.</i><br>
+                    Summa Cum Laude (4.0 GPA)<br>
+                </span>
+                <span class="right">March 1998 - March 1999</span>
+            </div>
+        </li>
+        <li>
+            <div class="flexdiv">
+                <span class="left">
+                    Kubernetes - Hands-on<br>
+                    <a target="_blank" href="https://www.udemy.com/course/learn-kubernetes/"
                         class="link-with-indicator">
-                        udemy.com/course/spring-hibernate-tutorial/
+                        KodeKloud Training
                         <i class="fas fa-external-link-alt fa-xs"></i>
                     </a>
                 </span>
                 <span class="right">
-                    Present
+                    September, 2024
                 </span>
             </div>
         </li>
-
+        <li>
+            <div class="flexdiv">
+                <span class="left">
+                    Spring Boot 3, Spring 6, Spring REST API, Spring MVC, Spring Security, Thymeleaf, JPA &
+                    Hibernate<br>
+                    <a target="_blank" href="https://www.udemy.com/course/spring-hibernate-tutorial/"
+                        class="link-with-indicator">
+                        Udemy
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a>
+                </span>
+                <span class="right">
+                    March, 2024
+                </span>
+            </div>
+        </li>
         <li>
             <div class="flexdiv">
                 <span class="left">
                     Go: The Complete Developer's Guide (Golang)<br>
                     <a target="_blank" href="https://www.udemy.com/course/go-the-complete-developers-guide"
                         class="link-with-indicator">
-                        udemy.com/course/go-the-complete-developers-guide
+                        Udemy
                         <i class="fas fa-external-link-alt fa-xs"></i>
                     </a>
                 </span>
@@ -54,7 +79,7 @@
                     Working with React and Go (Golang)<br>
                     <a target="_blank" href="https://www.udemy.com/course/working-with-react-and-go-golang/"
                         class="link-with-indicator">
-                        udemy.com/course/working-with-react-and-go-golang/
+                        Udemy
                         <i class="fas fa-external-link-alt fa-xs"></i>
                     </a>
                 </span>
@@ -68,7 +93,7 @@
                 <span class="left">
                     React Styled Components<br>
                     <a target="_blank" href="https://www.udemy.com/course/react-styled-components">
-                        udemy.com/course/react-styled-components/
+                        WebDevEducation
                         <i class="fas fa-external-link-alt fa-xs"></i>
                     </a>
                 </span>
@@ -82,7 +107,7 @@
                 <span class="left">
                     Deploying Java Spring Apps Online to Amazon Cloud (AWS)<br>
                     <a target="_blank" href="https://www.udemy.com/course/deploy-java-spring-apps-online">
-                        udemy.com/course/deploy-java-spring-apps-online/
+                        Udemy
                         <i class="fas fa-external-link-alt fa-xs"></i>
                     </a>
                 </span>
@@ -97,24 +122,13 @@
                     Create web app with Angular 12, .NET Core Web API & Mongo DB<br>
                     <a target="_blank"
                         href="https://www.udemy.com/course/create-web-app-with-angular-12-net-core-web-api-mongo-db">
-                        udemy.com/course/create-web-app-with-angular-12-net-core-web-api-mongo-db/
+                        Udemy
                         <i class="fas fa-external-link-alt fa-xs"></i>
                     </a>
                 </span>
                 <span class="right">
                     March, 2023
                 </span>
-            </div>
-        </li>
-        <li>
-            <div class="flexdiv">
-                <span class="left">
-                    Strayer University - Bachelors in Computer Science<br>
-                    <i>Completed 4 years of college in one year by teaching myself the material and testing out of
-                        classes.</i><br>
-                    Summa Cum Laude (4.0 GPA)<br>
-                </span>
-                <span class="right">March 1998 - March 1999</span>
             </div>
         </li>
     </ul>
