--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -5,6 +5,7 @@
         <li>C/C++ 2.0, Rust, Golang</li>
         <li>AWS, Azure</li>
         <li>Python, PowerShell, bash</li>
+        <li>Kubernetes, Docker</li>
         <li>SQL, NoSQL</li>
         <li>Java, Spring & Spring Boot</li>
         <li>TypeScript and JavaScript</li>
