--- a/_includes/sitelayout/leftpane.html
+++ b/_includes/sitelayout/leftpane.html
@@ -18,6 +18,7 @@
             <li><a href="#professionalskills">Active Top Secret<br>security clearance</a></li>
             <li><a href="#professionalskills">C/C++<br>(since mid 90s)</a></li>
             <li><a href="#professionalskills">GoLang, Rust (since 2020s)</a></li>
+            <li><a href="#professionalskills">Docker (since 2020s)</a></li>
             <li><a href="#professionalskills">C# (since early 2000s)</a></li>
             <li><a href="#professionalskills">Python (since mid 2010s)</a></li>
             <li><a href="#professionalskills">Java (since late 2000s)</a></li>
