adding eduction for Udemy Labs - Certified Kubernetes Application Developer

--- a/_includes/resume/education.html
+++ b/_includes/resume/education.html
@@ -26,6 +26,41 @@
                 <span class="right">March 1998 - March 1999</span>
             </div>
         </li>
+
+        <li>
+            <div class="flexdiv">
+                <span class="left">
+                    Udemy Labs - Certified Kubernetes Application Developer<br>
+                    <a target="_blank"
+                        href="https://learn.kodekloud.com/user/courses/udemy-labs-certified-kubernetes-application-developer"
+                        class="link-with-indicator">
+                        KodeKloud Training
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a>
+                </span>
+                <span class="right">
+                    September, 2024
+                </span>
+            </div>
+        </li>
+
+
+        <li>
+            <div class="flexdiv">
+                <span class="left">
+                    Kubernetes Challenges<br>
+                    <a target="_blank" href="https://learn.kodekloud.com/user/courses/kubernetes-challenges"
+                        class="link-with-indicator">
+                        KodeKloud Training
+                        <i class="fas fa-external-link-alt fa-xs"></i>
+                    </a>
+                </span>
+                <span class="right">
+                    September, 2024
+                </span>
+            </div>
+        </li>
+
         <li>
             <div class="flexdiv">
                 <span class="left">
